管理用Appの詳細取得とDraft編集APIを追加
